if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_contract_with_abi( asserter asserter asserter.cpp )
   target_include_directories( asserter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS asserter DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/asserter.wasm ${CMAKE_CURRENT_BINARY_DIR}/asserter.wasm COPYONLY )
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/asserter.abi  ${CMAKE_CURRENT_BINARY_DIR}/asserter.abi  COPYONLY )
endif()
