if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_contract_with_abi( get_sender_test get_sender_test get_sender_test.cpp )
   target_include_directories( get_sender_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS get_sender_test DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/get_sender_test.wasm ${CMAKE_CURRENT_BINARY_DIR}/get_sender_test.wasm COPYONLY )
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/get_sender_test.abi  ${CMAKE_CURRENT_BINARY_DIR}/get_sender_test.abi  COPYONLY )
endif()
