if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_contract_with_abi( integration_test integration_test integration_test.cpp )
   target_include_directories( integration_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS integration_test DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/integration_test.wasm ${CMAKE_CURRENT_BINARY_DIR}/integration_test.wasm COPYONLY )
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/integration_test.abi  ${CMAKE_CURRENT_BINARY_DIR}/integration_test.abi  COPYONLY )
endif()
