if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_contract_with_abi( proxy proxy proxy.cpp )
   target_include_directories( proxy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS proxy DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/proxy.wasm ${CMAKE_CURRENT_BINARY_DIR}/proxy.wasm COPYONLY )
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/proxy.abi  ${CMAKE_CURRENT_BINARY_DIR}/proxy.abi  COPYONLY )
endif()
