if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_executable( test_api test_api.cpp )
   target_include_directories( test_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS test_api DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/test_api.wasm ${CMAKE_CURRENT_BINARY_DIR}/test_api.wasm COPYONLY )
endif()
