if( EOSIO_COMPILE_TEST_CONTRACTS )
   add_contract_with_abi( test_api_db test_api_db test_api_db.cpp )
   target_include_directories( test_api_db PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} )
   install( TARGETS test_api_db DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} )
else()
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/test_api_db.wasm ${CMAKE_CURRENT_BINARY_DIR}/test_api_db.wasm COPYONLY )
   configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/test_api_db.abi  ${CMAKE_CURRENT_BINARY_DIR}/test_api_db.abi  COPYONLY )
endif()
